# svc-wallet/api/rest/routes.go
@@ -15,13 +15,16 @@ import (
 // @BasePath        /v1
 func RegisterRoutes(mux *http.ServeMux, controller *WalletController) {
 
-	walletHander := otelhttp.NewHandler(http.HandlerFunc(controller.WalletHandler), "WalletHandler")
+	// 1. Create wallet handler
+	createWalletHandler := otelhttp.NewHandler(http.HandlerFunc(controller.CreateWallet), "CreateWallet")
+	mux.Handle("/v1/wallet", createWalletHandler)
 
-	// 1. (refactored) Create a new wallet or get an existing wallet by phone number
-	mux.Handle("/v1/wallet", walletHander)
+	// 1.1 get wallet by phone number as a path parameter
+	getWalletHandler := otelhttp.NewHandler(http.HandlerFunc(controller.GetWallet), "GetWallet")
+	mux.Handle("/v1/wallet/{phone_number}", getWalletHandler)
 
-	balanceHandler := otelhttp.NewHandler(http.HandlerFunc(controller.ModifyWalletBalance), "ModifyWalletBalance")
 	// 2. Modify the balance of an existing wallet (deposit/withdraw)
+	balanceHandler := otelhttp.NewHandler(http.HandlerFunc(controller.ModifyWalletBalance), "ModifyWalletBalance")
 	mux.Handle("/v1/wallet/balance", balanceHandler)
 
 	// 3. Swagger UI handler mounted directly to your mux
