# svc-wallet/internal/wallet/dto.go
@@ -64,7 +64,7 @@ func (r *CreateWalletRequest) Validate() error {
 
 	// verify the phone number is valid and starts with +20 and is 13 characters long
 	r.PhoneNumber = strings.TrimSpace(r.PhoneNumber)
-	err := ValidatePhoneNumber(r.PhoneNumber)
+	err := ValidatePhoneNumber(&r.PhoneNumber)
 	if err != nil {
 		return err
 	}
@@ -72,14 +72,14 @@ func (r *CreateWalletRequest) Validate() error {
 	return nil
 }
 
-func ValidatePhoneNumber(phoneNumber string) error {
-	phoneNumber = strings.TrimSpace(phoneNumber)
-	if !strings.HasPrefix(phoneNumber, "+20") || len(phoneNumber) != 13 {
+func ValidatePhoneNumber(phoneNumber *string) error {
+	*phoneNumber = strings.TrimSpace(*phoneNumber)
+	if !strings.HasPrefix(*phoneNumber, "+20") || len(*phoneNumber) != 13 {
 		return ErrInvalidPhoneNumber // return the domain error for invalid phone number format
 	}
 
 	// 2. Verify the payload is numeric (prevents +20ABCDEFGHIJ)
-	for _, ch := range phoneNumber[3:] {
+	for _, ch := range (*phoneNumber)[3:] {
 		if ch < '0' || ch > '9' {
 			return ErrInvalidPhoneNumber // return the domain error for invalid phone number format
 		}
